@@ -13,7 +13,7 @@ import javax.swing.*;
  * Table data model for display of slot manager contents
  * @author		Bob Jacobsen   Copyright (C) 2001
  *                      Andrew Crosland          (C) 2006 ported to SPROG
- * @version		$Revision: 1.9 $
+ * @version		$Revision: 1.10 $
  */
 public class SprogSlotMonDataModel extends javax.swing.table.AbstractTableModel implements SprogSlotListener  {
 
@@ -101,8 +101,8 @@ public class SprogSlotMonDataModel extends javax.swing.table.AbstractTableModel 
         }
     }
 
-    static final Boolean True = new Boolean(true);
-    static final Boolean False = new Boolean(false);
+    static final Boolean True = Boolean.valueOf("True");
+    static final Boolean False = Boolean.valueOf("False");
 
     @SuppressWarnings("null")
 	public Object getValueAt(int row, int col) {
